fix for bug #189490. remember the current mail view, across sessions. (we already remember it when switching folders). r/sr=bienvenu a=sspitzer